After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 600425 - next video paused at the same point of previous one
next video paused at the same point of previous one
Status: RESOLVED FIXED
Product: totem
Classification: Core
Component: Movie player
2.28.x
Other Linux
: Normal normal
: ---
Assigned To: General Totem maintainer(s)
General Totem maintainer(s)
: 594929 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2009-11-02 14:32 UTC by Pedro Villavicencio
Modified: 2010-04-07 16:21 UTC
See Also:
GNOME target: ---
GNOME version: 2.27/2.28



Description Pedro Villavicencio 2009-11-02 14:32:38 UTC
this report has been filed here:

https://bugs.edge.launchpad.net/ubuntu/+source/totem/+bug/466620

"If I click next button while I'm playing one video it gets to the same point of new video and pauses, not to the beginning of new video. Eg. If my current video plays @ 3.00 mins after clicking next new video would get paused @ 3.00 mins not at the begining."
Comment 1 Pedro Villavicencio 2009-11-02 14:56:50 UTC
Steps to reproduce the issue:

1- Load 2 different video files A.avi - B.avi
2- Play video file A.avi and pause it at minute 1 
3- Click Next

Expected Results

The video file B.avi should start from the beginning

Actual Results

the video B.avi is paused at minute 1 

I'm adding a gstreamer debug log in case it helps:

http://launchpadlibrarian.net/34959336/gstreamer-log.txt

totem version is 2.28.1
Comment 2 Pedro Villavicencio 2009-11-02 15:00:16 UTC
it's more reproducible if you skip the video with the time bar
Comment 3 Bastien Nocera 2010-04-07 16:21:37 UTC
*** Bug 594929 has been marked as a duplicate of this bug. ***